# websocket-template

./: .gitignore  README.md  index.js  package.json  template.js  wrangler.toml  ws_server_worker.js
client/: .Cargo.toml.swp  Cargo.toml  README.md
client/src/: main.rs
